--- a/Tweets/Views/TweetTableViewCell.xib
+++ b/Tweets/Views/TweetTableViewCell.xib
@@ -43,6 +43,9 @@
                             <constraint firstAttribute="height" constant="30" id="zZI-a1-HaA"/>
                         </constraints>
                         <state key="normal" image="retweet"/>
+                        <connections>
+                            <action selector="retweetButtonTapped" destination="KGk-i7-Jjw" eventType="touchUpInside" id="2hx-mk-CDK"/>
+                        </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="11v-9Y-KDI" userLabel="Like Button">
                         <rect key="frame" x="288" y="69" width="22" height="30"/>
@@ -51,6 +54,9 @@
                             <constraint firstAttribute="width" constant="22" id="v3U-hi-cbn"/>
                         </constraints>
                         <state key="normal" image="like"/>
+                        <connections>
+                            <action selector="likeButtonTapped" destination="KGk-i7-Jjw" eventType="touchUpInside" id="yt2-85-fzW"/>
+                        </connections>
                     </button>
                 </subviews>
                 <constraints>
